--- a/index.html
+++ b/index.html
@@ -9,17 +9,17 @@
 </head>
 <body class="background">
   <h1>BMI, BMR & Macronutrient Calculator</h1>
-  <p>Improve Your Health. Metabolic Weight Loss Plan</p>
+  <p>Improve Your Health. Metabolic Weight Loss Plan &#128293</p>
   </p>
   <fieldset>
   <label aria-autocomplete="list" id="label" for="name">First Name:</label>
   <input id="input" type="text" name="userName" id="userName">
-  <label aria-autocomplete="list" id="label" for="age">Age:</label>
-  <input id="input" type="text" name="userAge" id="userAge">
-  <label aria-autocomplete="list" id="label" for="height">Height(cm):</label>
-  <input id="input" type="text" name="userName" id="userHeight">
-  <label aria-autocomplete="list" id="label" for="weight">Weight(kg):</label>
-  <input id="input" type="text" name="userAge" id="userWeight">
+  <label  aria-autocomplete="list" id="label" for="age">Age:</label>
+  <input placeholder="enter number" id="input" type="text" name="userAge" id="userAge">
+  <label  aria-autocomplete="list" id="label" for="height">Height:</label>
+  <input placeholder="centimetres" id="input" type="text" name="userName" id="userHeight">
+  <label  aria-autocomplete="list" id="label" for="weight">Weight:</label>
+  <input placeholder="kilograms" id="input" type="text" name="userAge" id="userWeight">
   <fieldset>
   <legend>Select Your Gender:</legend>   
   <form>
@@ -31,7 +31,6 @@
       <option>Not sure</option>
     </select>
   </form>
-     
 </fieldset> 
   <input id="submit" type="submit" value="Submit" id="submit">           
 <script src="main.js"></script>  
